0.06
 - Fix test dependencies.
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Move bugtracker to github.
 - Rename example files to better names.
 - Rewrite doc to use of =head2.
 - Update Module::Install to 1.21 version.
 - Update author github username.
 - Update author name.
 - Update copyright years.

0.05 2015-09-28T17:56:18+02:00
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SEE ALSO section in doc.
 - Move author tests to xt/ directory.
 - Remove diacritics from author name in Makefile.PL.
 - Update Module::Install to 1.16 version.
 - Update copyright years.

0.04 2014-10-02T06:42:02+02:00
 - Add tests.
 - Fix LICENSE file.
 - Update Module::Install to 1.12 version.

0.03 2013-11-13
 - Add 'readme_from' directive to Makefile.PL.
 - Add minimal Perl version.
 - Add some tests.

0.02 2013-09-21
 - Rewrite Changes file to CPAN::Changes::SPEC format.

0.01 2013-09-19
 - First version.