@@ -29,7 +29,7 @@ requires:
   DateTime: 0
   English: 0
   Error::Pure: 0.11
-  List::MoreUtils: 0
+  List::Util: 1.33
   Random::Day: 0.01
   Readonly: 0
   perl: 5.6.2
