@@ -20,7 +20,7 @@ requires 'Class::Utils' => 0.03;
 requires 'DateTime' => 0;
 requires 'English' => 0;
 requires 'Error::Pure' => 0.11;
-requires 'List::MoreUtils' => 0;
+requires 'List::Util' => 1.33;
 requires 'Random::Day' => 0.01;
 requires 'Readonly' => 0;
 requires 'perl' => '5.6.2';
