@@ -4,6 +4,7 @@
  - Improve SYNOPSIS section in doc.
  - Move bugtracker to github.
  - Rename example files to better names.
+ - Rewrite List::MoreUtils to List::Util.
  - Rewrite doc to use of =head2.
  - Update Module::Install to 1.21 version.
  - Update author github username.
